--- a/job.yml
+++ b/job.yml
@@ -2,7 +2,8 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   # Prefix name of job with user and timestamp
-  name: $USER
+  #name: $USER
+  name: rna.kmer.cv
   namespace: stuartlab
 spec:
   backoffLimit: 0
@@ -46,8 +47,9 @@ spec:
             nvidia.com/gpu: 2
             memory: "170G"
             ephemeral-storage: "60G"
-        #command: ["bash", "kmer_cv_wrap.sh", "./ont_models/r9.4_180mv_70bps_5mer_RNA.model","rna_kmer_cv_results.npy"]
-        command: ["bash", "cv_wrap.sh", "./ont_models/r9.4_180mv_70bps_5mer_RNA.model","rna_cv_results.npy" ]# test script
+        #command: ["bash", "cv_wrap.sh", "./ont_models/r9.4_180mv_450bps_6mer_DNA.model","dna_cv_results.npy"]
+        #command: ["bash", "cv_wrap.sh", "./ont_models/r9.4_180mv_70bps_5mer_RNA.model","rna_cv_results.npy" ]
+        command: ["bash", "kmer_cv_wrap.sh", "./ont_models/r9.4_180mv_70bps_5mer_RNA.model","rna_kmer_cv_results.npy" ]
       restartPolicy: Never
       volumes:
       - name: ianastop-storage
