--- a/job.yml
+++ b/job.yml
@@ -3,7 +3,7 @@ kind: Job
 metadata:
   # Prefix name of job with user and timestamp
   #name: $USER
-  name: dna.cv
+  name: combined.cv
   namespace: stuartlab
 spec:
   backoffLimit: 0
@@ -47,9 +47,9 @@ spec:
             nvidia.com/gpu: 1
             memory: "120G"
             ephemeral-storage: "60G"
-        command: ["bash", "cv_wrap.sh", "./ont_models/r9.4_180mv_450bps_6mer_DNA.model","dna_cv_results.npy"]
-        #command: ["bash", "combined_cv_wrap.sh", "0", "combined_cv_results.npy"]
-        #command: ["bash", "cv_wrap.sh", "./ont_models/r9.4_180mv_70bps_5mer_RNA.model","rna_cv_results.npy" ]
+        #command: ["bash", "cv_wrap.sh", "./ont_models/r9.4_180mv_450bps_6mer_DNA.model","dna_cv_results_ES.npy", "0.9 0.82 0.75 0.5 0.25 0.1"]
+        command: ["bash", "combined_cv_wrap.sh", "0", "combined_cv_results.npy",  "0.9 0.75 0.5 0.25 0.1"]
+        #command: ["bash", "cv_wrap.sh", "./ont_models/r9.4_180mv_70bps_5mer_RNA.model","rna_cv_results_ES.npy","0.9 0.75 0.5 0.25 0.1 0.05 0.01" ]
         #command: ["bash", "kmer_cv_wrap.sh", "./ont_models/r9.4_180mv_70bps_5mer_RNA.model","rna_kmer_cv_results.npy" ]
       restartPolicy: Never
       volumes:
