--- a/job.yml
+++ b/job.yml
@@ -3,7 +3,7 @@ kind: Job
 metadata:
   # Prefix name of job with user and timestamp
   #name: $USER
-  name: combined.cv
+  name: rna.base.exclude
   namespace: stuartlab
 spec:
   backoffLimit: 0
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: magic
-        image: $DOCKERHUB_ACCOUNT/gcn_env:latest
+        image: $DOCKERHUB_ACCOUNT/ndmi_env:latest
         imagePullPolicy: Always
         env:
         - name: USER
@@ -39,17 +39,18 @@ spec:
         resources:
           requests:
             cpu: "5"
-            nvidia.com/gpu: 1
-            memory: "100G"
-            ephemeral-storage: "50G"
+            nvidia.com/gpu: 2
+            memory: "60G"
+            ephemeral-storage: "100G"
           limits:
             cpu: "6"
-            nvidia.com/gpu: 1
-            memory: "120G"
-            ephemeral-storage: "60G"
-        #command: ["bash", "cv_wrap.sh", "./ont_models/r9.4_180mv_450bps_6mer_DNA.model","dna_cv_results_ES.npy", "0.9 0.82 0.75 0.5 0.25 0.1"]
-        command: ["bash", "combined_cv_wrap.sh", "0", "combined_cv_results.npy",  "0.9 0.75 0.5 0.25 0.1"]
-        #command: ["bash", "cv_wrap.sh", "./ont_models/r9.4_180mv_70bps_5mer_RNA.model","rna_cv_results_ES.npy","0.9 0.75 0.5 0.25 0.1 0.05 0.01" ]
+            nvidia.com/gpu: 2
+            memory: "70G"
+            ephemeral-storage: "160G"
+        command: ["bash", "base_exclude_wrap.sh", "./ont_models/r9.4_180mv_70bps_5mer_RNA.model", "rna_exclude_bases_results.npy"]
+        #command: ["bash", "cv_wrap.sh", "./ont_models/r9.4_180mv_450bps_6mer_DNA.model","dna_cv_0.34.npy", "0.66"]
+        #command: ["bash", "combined_cv_wrap.sh", "0", "combined_cv_results.npy",  "0.9 0.75 0.5 0.25 0.1"]
+        #command: ["bash", "cv_wrap.sh", "./ont_models/r9.4_180mv_70bps_5mer_RNA.model","rna_cv_results_ES.npy","0.9 0.75 0.56 0.5 0.25 0.1 0.05 0.01" ]
         #command: ["bash", "kmer_cv_wrap.sh", "./ont_models/r9.4_180mv_70bps_5mer_RNA.model","rna_kmer_cv_results.npy" ]
       restartPolicy: Never
       volumes:
