--- a/job.yml
+++ b/job.yml
@@ -3,7 +3,7 @@ kind: Job
 metadata:
   # Prefix name of job with user and timestamp
   #name: $USER
-  name: dna.basepairdrop
+  name: dna.basedrop.run4
   namespace: stuartlab
 spec:
   backoffLimit: 0
@@ -38,30 +38,34 @@ spec:
           name: ianastop-out
         resources:
           requests:
-            cpu: "10"
+            cpu: "1"
             nvidia.com/gpu: 1
-            memory: "10G"
+            memory: "5G"
             ephemeral-storage: "100G"
           limits:
-            cpu: "20"
+            cpu: "22"
             nvidia.com/gpu: 1
             memory: "45G"
             ephemeral-storage: "160G"
-        #command: ['bash','train_wrap.sh', './ont_models/r9.4_180mv_450bps_6mer_DNA.model', 'dna_model','dna_mod_pred_results_repeat50times']
+        #command: ['bash','quantile_analysis_wrap.sh', './ont_models/r9.4_180mv_450bps_6mer_DNA.model', 'dna_model','dna_gscv_quantile_analysis_repeat50times_run2', '0 0.05 0.10 0.15 0.20 0.25 0.30 0.35 0.40 0.45 0.50', "./results/DNA_gscv_500combinations_singleNN_results.npy"]
         #command: ['bash','train_wrap.sh', './ont_models/r9.4_180mv_70bps_5mer_RNA.model', 'rna_model','rna_model_results_repeat50times']
         #command: ["bash", "gscv_wrap.sh", "./ont_models/r9.4_180mv_70bps_5mer_RNA.model", "10"]
         #command: ["bash", "gscv_wrap.sh", "./ont_models/r9.4_180mv_450bps_6mer_DNA.model", "10"]
-        command: ["bash", "basepair_exclude_wrap.sh", "./ont_models/r9.4_180mv_450bps_6mer_DNA.model", "dna_exclude_basepairs_run2_results.npy"]
-        #command: ["bash", "basepair_exclude_wrap.sh", "./ont_models/r9.4_180mv_70bps_5mer_RNA.model", "rna_exclude_basepairs_run2_results.npy"]
-        #command: ["bash", "base_exclude_wrap.sh", "./ont_models/r9.4_180mv_450bps_6mer_DNA.model", "dna_exclude_base_repeat50times_run2_results.npy"]
-        #command: ["bash", "base_exclude_wrap.sh", "./ont_models/r9.4_180mv_70bps_5mer_RNA.model", "rna_exclude_base_repeat50times_run2_results.npy"]
-        #command: ["bash", "cv_wrap.sh", "./ont_models/r9.4_180mv_450bps_6mer_DNA.model","dna_cv_run2_results.npy"]
-        #command: ["bash", "cv_wrap.sh", "./ont_models/r9.4_180mv_70bps_5mer_RNA.model","rna_cv_results_run2.npy" ]
+        #command: ["bash", "gscv_wrap.sh", "./ont_models/6mer_DNA_5mer_RNA_combined.model", "10"]
+        #command: ["bash", "basepair_exclude_wrap.sh", "./ont_models/r9.4_180mv_450bps_6mer_DNA.model", "dna_exclude_basepairs_run2_results.npy", 'DNA']
+        #command: ["bash", "basepair_exclude_wrap.sh", "./ont_models/r9.4_180mv_70bps_5mer_RNA.model", "rna_exclude_basepairs_run2_results.npy", 'RNA']
+        command: ["bash", "base_exclude_wrap.sh", "./ont_models/r9.4_180mv_450bps_6mer_DNA.model", "dna_exclude_base_repeat50times_run4_results.npy", 'DNA']
+        #command: ["bash", "base_exclude_wrap.sh", "./ont_models/r9.4_180mv_70bps_5mer_RNA.model", "rna_exclude_base_repeat50times_run2_results.npy", 'RNA']
+        #command: ["bash", "base_exclude_wrap.sh", "./ont_models/6mer_DNA_5mer_RNA_combined.model", "dna_rna_exclude_base_repeat50times_run1_results.npy"]
+        #command: ["bash", "cv_wrap.sh", "./ont_models/r9.4_180mv_450bps_6mer_DNA.model","dna_downsample_run2_results.npy"]
+        #command: ["bash", "cv_wrap.sh", "./ont_models/r9.4_180mv_70bps_5mer_RNA.model","rna_downsample_run2_results.npy" ]
+        #command: ["bash", "cv_wrap.sh", "./ont_models/6mer_DNA_5mer_RNA_combined.model","dna_rna_cv_results_run2.npy" ]
         #command: ["bash", "combined_cv_wrap.sh", "0", "combined_cv_results.npy",  "0.9 0.75 0.5 0.25 0.1"]
         #command: ["bash", "kmer_cv_wrap.sh", "./ont_models/r9.4_180mv_70bps_5mer_RNA.model","rna_posdrop_repeat50times_run2_results.npy" ]
-        #command: ["bash", "kmer_cv_wrap.sh", "./ont_models/r9.4_180mv_450bps_6mer_DNA.model","dna_kmer_cv_repeat50times_run2_results.npy" ]
+        #command: ["bash", "kmer_cv_wrap.sh", "./ont_models/r9.4_180mv_450bps_6mer_DNA.model","dna_posdrop_repeat50times_run2_results.npy" ]
         #command: ['bash','rna_mod_pred.sh', './ont_models/r9.4_180mv_70bps_5mer_RNA.model', 'rna_model','rna_mod_pred_results_repeat50times']
-        #command: ['bash','dna_mod_pred.sh', './ont_models/r9.4_180mv_450bps_6mer_DNA.model', 'dna_model','dna_mod_pred_results_50fold']
+        #command: ['bash','dna_mod_trainpred.sh', './ont_models/r9.4_180mv_450bps_6mer_DNA.model', 'dna_model','dna_mod_trainpred_results_50fold_run2']
+        #command: ['bash','dna_mod_pred.sh', './ont_models/r9.4_180mv_450bps_6mer_DNA.model','dna_model', 'dna_mod_pred_results_50repeat_run1.npy']
       restartPolicy: Never
       volumes:
       - name: ianastop-storage
